# play-dis

./: CMakeLists.txt
go/: go.mod  main.go
src/: X86GenMnemonicTables.inc  X86GenRegisterInfo.inc  X86GenSubtargetInfo.inc  compiler.cpp  compiler.h  dis.cpp  elf_file.cpp  elf_file.h  gen_x86_h.sh  inst.inc  loader.cpp  loader.h  main.cpp  runtime.cpp  runtime.h  runtime_so.cpp  translater.cpp  translater.h  utils.cpp  utils.h
